[package]
name = "railway_bokking_system"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" , features = ["staking"]}
serde = {version = "1.0.103" , default-features = false , feature = ["derive"]}
cw-storage-plus = "0.13.4"
thiserror = "1"
serde_json = "1.0"
cw721-base = {version = "0.18.0",default-features = false}
chrono = "0.4.38"
serde_with = "1.11"


[dev-dependencies]
cw-multi-test = "0.13.4"
